--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 	<h1>мой синхронизированный сайт</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates cum eaque possimus, delectus, accusamus a repellat reprehenderit odit tempora unde consectetur in, assumenda odio dolore.</p>
 </body>
 </html>
